--- a/videos/src/components/VideoItem.css
+++ b/videos/src/components/VideoItem.css
@@ -1,9 +1,21 @@
+body {
+    background: #11998e;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #38ef7d, #11998e);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #38ef7d, #11998e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+    font-family: 'Poppins', sans-serif !important;
+}
 .video-item {
     display: flex !important;
     align-items: center !important;
     cursor: pointer;
 }
+.content .header {
+    color: #222 !important;
+}
 .video-item.item img {
     max-width: 180px;
+}
+.segment {
+    background: rgba(255,255,255,0.6) !important;
 }
